<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
				xmlns:tools="http://schemas.android.com/tools"
				android:layout_width="match_parent"
				android:layout_height="match_parent"
				android:paddingBottom="@dimen/activity_vertical_margin"
				android:paddingLeft="@dimen/activity_horizontal_margin"
				android:paddingRight="@dimen/activity_horizontal_margin"
				android:paddingTop="@dimen/activity_vertical_margin"
				tools:context=".activity.RegisterDeskActivity_$RegisterDeskFragment_">

	<TextView
			android:id="@+id/registerDesk1TextView"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/register_desk_activity_register_desk_1_text"/>

	<Button
			android:id="@+id/readQRCodeButton"
			style="@style/button"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_below="@+id/registerDesk1TextView"
			android:layout_centerHorizontal="true"
			android:layout_marginTop="@dimen/view_vertical_margin"
			android:text="@string/register_desk_activity_read_qr_code_button_text"/>

	<TextView
			android:id="@+id/registerDesk2TextView"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_below="@+id/readQRCodeButton"
			android:layout_marginTop="@dimen/view_vertical_margin"
			android:text="@string/register_desk_activity_register_desk_2_text"/>

</RelativeLayout>
