<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
				xmlns:tools="http://schemas.android.com/tools"
				android:layout_width="match_parent"
				android:layout_height="match_parent"
				android:paddingBottom="@dimen/activity_vertical_margin"
				android:paddingLeft="@dimen/activity_horizontal_margin"
				android:paddingRight="@dimen/activity_horizontal_margin"
				android:paddingTop="@dimen/activity_vertical_margin"
				tools:context=".activity.HomeActivity_$HomeFragment_">

	<ImageView
			android:id="@+id/endavaImageView"
			android:layout_width="190dp"
			android:layout_height="63dp"
			android:layout_centerHorizontal="true"
			android:layout_marginTop="10dp"
			android:adjustViewBounds="true"
			android:contentDescription="endavaIcon"
			android:scaleType="fitXY"
			android:src="@drawable/logo"/>

	<TextView
			android:id="@+id/welcomeTextView"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_below="@+id/endavaImageView"
			android:text="@string/home_activity_welcome_text"
			android:layout_marginTop="30dp"
			android:textSize="@dimen/text_appearance_smaller_medium"
			android:textStyle="bold"/>

	<RelativeLayout
			android:id="@+id/loggedInUserRelativeLayout"
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:layout_below="@+id/welcomeTextView"
			android:layout_marginTop="35dp"
			android:visibility="gone">

		<TextView
				android:id="@+id/loggedAsTextView"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginTop="@dimen/view_vertical_margin"
				android:text="@string/home_activity_logged_as_text"
				android:textSize="@dimen/text_appearance_smaller_medium"/>

		<RelativeLayout
				android:id="@+id/administerRelativeLayout"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginTop="25dp"
				android:layout_below="@+id/loggedAsTextView"
				android:visibility="gone">

			<TextView
					android:id="@+id/administerUsernameTextView"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="Please choose the username which assets you want to register."
					android:textSize="@dimen/text_appearance_smaller_medium"/>

			<RelativeLayout
					android:id="@+id/usernameToAdministerRelativeLayout"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_alignLeft="@+id/administerUsernameTextView"
					android:layout_below="@+id/administerUsernameTextView">

				<TextView
						android:id="@+id/usernameToAdministerTextView"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:layout_centerVertical="true"
						android:text="@string/home_activity_username_text"
						android:textSize="@dimen/text_appearance_smaller_medium"/>

				<com.fsociety.domclient.ui.InstantAutoCompleteTextView
						android:id="@+id/usernameToAdministerInstantAutoCompleteTextView"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:layout_marginLeft="@dimen/spacing_between_views"
						android:layout_toRightOf="@+id/usernameToAdministerTextView"
						android:textSize="@dimen/text_appearance_smaller_medium"/>
			</RelativeLayout>
		</RelativeLayout>

		<TextView
				android:id="@+id/whatToDoTextView"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_below="@+id/administerRelativeLayout"
				android:layout_marginTop="20dp"
				android:text="@string/home_activity_what_to_do_text"
				android:textSize="@dimen/text_appearance_smaller_medium"/>

		<Button
				android:id="@+id/registerDeskButton"
				style="@style/button"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_below="@+id/whatToDoTextView"
				android:layout_centerHorizontal="true"
				android:layout_marginTop="25dp"
				android:text="Register asset"
				android:drawableLeft="@drawable/ic_add"
				android:drawableStart="@drawable/ic_add"
				android:textSize="@dimen/text_appearance_smaller_medium"/>

		<Button
				android:id="@+id/findFriendButton"
				style="@style/button"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_below="@+id/registerDeskButton"
				android:layout_centerHorizontal="true"
				android:layout_marginTop="@dimen/view_vertical_margin"
				android:text="@string/home_activity_find_friend_text"
				android:drawableLeft="@drawable/ic_search"
				android:drawableStart="@drawable/ic_search"
				android:textSize="@dimen/text_appearance_smaller_medium"/>

	</RelativeLayout>

	<RelativeLayout
			android:id="@+id/notLoggedInUserRelativeLayout"
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:layout_marginTop="35dp"
			android:layout_below="@+id/welcomeTextView">

		<TextView
				android:id="@+id/loginExplainTextView"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginTop="@dimen/view_vertical_margin"
				android:text="@string/home_activity_login_explain_text"
				android:textSize="@dimen/text_appearance_smaller_medium"/>

		<RelativeLayout
				android:id="@+id/usernameRelativeLayout"
				android:layout_width="wrap_content"
				android:layout_marginTop="10dp"
				android:layout_height="wrap_content"
				android:layout_alignLeft="@+id/loginExplainTextView"
				android:layout_below="@+id/loginExplainTextView">

			<TextView
					android:id="@+id/usernameTextView"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_centerVertical="true"
					android:text="@string/home_activity_username_text"
					android:textSize="@dimen/text_appearance_smaller_medium"/>

			<EditText
					android:id="@+id/usernameEditText"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_marginLeft="@dimen/spacing_between_views"
					android:layout_toRightOf="@+id/usernameTextView"
					android:textSize="@dimen/text_appearance_smaller_medium"/>
		</RelativeLayout>

		<Button
				android:id="@+id/loginButton"
				style="@style/button"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_below="@+id/usernameRelativeLayout"
				android:layout_centerHorizontal="true"
				android:layout_marginTop="@dimen/view_vertical_margin"
				android:text="@string/home_activity_login_text"
				android:drawableLeft="@drawable/ic_identity"
				android:drawableStart="@drawable/ic_identity"
				android:textSize="@dimen/text_appearance_smaller_medium"/>

	</RelativeLayout>

</RelativeLayout>
