<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
				xmlns:tools="http://schemas.android.com/tools"
				android:layout_width="match_parent"
				android:layout_height="match_parent"
				android:paddingBottom="@dimen/activity_vertical_margin"
				android:paddingLeft="@dimen/activity_horizontal_margin"
				android:paddingRight="@dimen/activity_horizontal_margin"
				android:paddingTop="@dimen/activity_vertical_margin"
				tools:context=".activity.FindFriendActivity_$FindFriendFragment_">

	<ImageView
			android:id="@+id/searchImageView"
			android:layout_width="100dp"
			android:layout_height="100dp"
			android:layout_centerHorizontal="true"
			android:layout_marginTop="10dp"
			android:adjustViewBounds="true"
			android:contentDescription="searchIcon"
			android:scaleType="fitXY"
			android:src="@drawable/search"/>

	<TextView
			android:id="@+id/findFriendTextView"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:textSize="@dimen/text_appearance_smaller_medium"
			android:layout_marginTop="25dp"
			android:layout_below="@+id/searchImageView"
			android:text="@string/find_friend_activity_find_friend_text"/>

	<RelativeLayout
			android:id="@+id/defaultCountryRelativeLayout"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_below="@+id/findFriendTextView"
			android:layout_marginLeft="@dimen/view_horizontal_margin">

		<TextView
				android:id="@+id/searchUsernameTextView"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_centerVertical="true"
				android:text="@string/find_friend_activity_search_username_text"
				android:textSize="@dimen/text_appearance_smaller_medium"/>

		<com.fsociety.domclient.ui.InstantAutoCompleteTextView
				android:id="@+id/searchUsernameInstantAutoCompleteTextView"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginLeft="@dimen/spacing_between_views"
				android:layout_toRightOf="@+id/searchUsernameTextView"
				android:textSize="@dimen/text_appearance_smaller_medium"/>
	</RelativeLayout>

	<Button
			android:id="@+id/findFriendButton"
			style="@style/button"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_below="@+id/defaultCountryRelativeLayout"
			android:layout_centerHorizontal="true"
			android:layout_marginTop="@dimen/view_vertical_margin"
			android:text="@string/find_friend_activity_find_friend_button_text"/>

</RelativeLayout>
